# simple-event-driven-ecommerce-rabbitmq

./: .env.example  .gitignore  README.md  pyproject.toml  settings.toml  tox.ini
app/: consts.py
app/notification_service/: producer.py  pubsub.py  schemas.py
app/order_service/: consumer.py  producer.py  pubsub.py  schemas.py
app/payment_service/: consumer.py  producer.py  pubsub.py  schemas.py  utils.py
config/: base.py  logging.py  rabbitmq.py  settings.py
scripts/: coverage.sh
tests/: conftest.py
tests/app/notification_service/: test_producer.py  test_pubsub.py
tests/app/order_service/: test_consumer.py  test_prodcuer.py  test_pubsub.py  test_schemas.py
tests/app/payment_service/: test_consumer.py  test_producer.py  test_pubsub.py  test_utils.py
tests/toolkit/schemas/: test_base.py
toolkit/schemas/: __init__.py  base.py  mixins.py
